--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     background-color: rgb(44, 44, 44);
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
  }
 
 .header {
@@ -17,6 +18,50 @@ body {
     display: flex;
     margin-left: auto;
     gap: 10px;
+}
+
+.Main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: center;
+    margin: 200px;
+    margin-bottom: 100px;
+}
+
+.About {
+    color: white;
+    font-weight: bold;
+    font-size: 40px;
+}
+
+h3 {
+    color: rgb(208, 0, 0);
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    color: whitesmoke;
+    gap: 32px;
+    padding: 16px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+.quote {
+    background-color: rgb(188, 188, 188);
+    padding: 100px;
+    font-family: cursive;
+    font-size: 24px;
+    font-style: italic;
+}
+
+.text2 {
+    text-align: right;
+    margin: 20px;
 }
 
 .footer {
